--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,10 +22,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album1.src} alt="">
         <p>Dubzz - Raggafunky Session</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0CQ9C8T9X" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
@@ -35,10 +35,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album2.src} alt="">
         <p>Margarita</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0C6NCSNTN" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
@@ -48,10 +48,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album3.src} alt="">
         <p>Sunshine</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0CP681XZT" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
@@ -61,10 +61,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album4.src} alt="">
         <p>Benicassim</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0B8K7H2LN" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
@@ -74,10 +74,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album5.src} alt="">
         <p>Be Yourself</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart, Puppa Yharno</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0D6RRQHD6" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
@@ -87,10 +87,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album6.src} alt="">
         <p>Hi - Fi</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0CRDTS4XP" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
@@ -100,10 +100,10 @@ import album7 from "../assets/image/Album7.webp";
       <div class="content-hover"> 
         <img src={album7.src} alt="">
         <p>The Dance of Shiva</p>
-        <p class="grey">Artist</p>
+        <p class="grey">Raggart</p>
         <div class="content">
           <button class="primarybutton">
-            <a href="#" target="_blank">Go to the album</a>
+            <a href="https://www.amazon.com/music/player/albums/B0C14W791Z" target="_blank">Go to the album</a>
           </button>
         </div>
       </div>
