--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -6,10 +6,10 @@ const radioUrl = "https://play.radioking.io/radiotest27";
   <h2>SOCIAL</h2>
   <div class="underline"></div>
   <figure>
-    <a href="#" target="_blank"><i class="ph-fill ph-spotify-logo"></i></a>
-    <a href="#" target="_blank"><i class="ph-fill ph-youtube-logo"></i></a>
-    <a href="#" target="_blank"><i class="ph-fill ph-tidal-logo"></i></a>
-    <a href="#" target="_blank"><i class="ph-fill ph-equalizer"></i></a>
+    <a href="https://open.spotify.com/intl-es/artist/011RlZS72X5YMFxJPmfr7C?si=im3MCWXwSiCscrzHN4qsCw" target="_blank"><i class="ph-fill ph-spotify-logo"></i></a>
+    <a href="https://www.youtube.com/@DjRaggart" target="_blank"><i class="ph-fill ph-youtube-logo"></i></a>
+    <a href="https://tidal.com/browse/artist/14085152" target="_blank"><i class="ph-fill ph-tidal-logo"></i></a>
+    <a href="https://www.deezer.com/mx/artist/5577174" target="_blank"><i class="ph-fill ph-equalizer"></i></a>
   </figure>
   <p class="name">RAGGART</p>
 </section>
