delete and changes medios

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -3,15 +3,11 @@ import Gallery1 from "../assets/image/Gallery1.jpg";
 import Gallery2 from "../assets/image/Gallery2.jpg";
 import Gallery3 from "../assets/image/Gallery3.jpg";
 import Gallery4 from "../assets/image/Gallery4.jpg";
-import Gallery5 from "../assets/image/Gallery5.jpg";
-import Gallery6 from "../assets/image/Gallery6.jpg";
-import Gallery7 from "../assets/image/Gallery7.jpg";
-import Gallery8 from "../assets/image/Gallery8.jpg";
+import Gallery12 from "../assets/image/Gallery12.jpg";
 import Left from "../assets/image/left.png";
 import Right from "../assets/image/right.png";
 const images = [
-  Gallery1, Gallery2, Gallery3, Gallery4, Gallery5, Gallery6, Gallery7, Gallery8
-];
+  Gallery1, Gallery2, Gallery3, Gallery4];
 ---
 
 <section id="gallery"> 
