--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Navigation from "../components/Navigation.astro";
 import Openbutton from "../components/Hamburguer.astro";
-import logo from "../assets/image/logoradio.png";
+import logo from "../assets/image/Gallery1.jpg";
 ---
 
 <!doctype html>
