--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -9,6 +9,7 @@ import logo from "../assets/image/Gallery1.jpg";
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href={logo.src} />
+    <meta name="google-adsense-account" content="ca-pub-4590185901736265">
     <meta name="google-site-verification" content="M_3xpWfmwyovVPjekuP9oHivxTbD10tfGwi_YmkBrE0" />
 		<meta name="viewport" content="width=device-width" />
     <meta name="description" content="Enjoy the best reggae and dancehall Jamaican music on Raggart Radio. Listen to your favorite songs 24/7, discover new artists, and connect with the unique vibe of Jamaica. The essence of reggae in one place!" />
