--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -14,8 +14,7 @@ const radioUrl = "https://play.radioking.io/raggart";
   <p class="name">RAGGART</p>
 </section>
 <div class="radio-container">
-  
- <iframe  src="https://player.radioking.io/raggart/?c=%231e7fcb&c2=%23ffffff&f=h&i=1&p=1&s=0&li=1&popup=1&plc=NaN&h=undefined&l=470&v=2" style="border-radius: 5px; width: 470px; height: 145px; " frameBorder="0" ></iframe><script type="text/javascript" src="https://player.radioking.io/scripts/iframe.bundle.js"></script>
+  <iframe  src="https://player.radioking.io/raggart/?c=%232F3542&c2=%237BED9F&f=h&i=0&p=1&s=0&li=0&popup=0&plc=NaN&h=undefined&l=100&v=2&fullsize" style="border-radius: 5px; width: 100%; height: 145px; " frameBorder="0" ></iframe><script type="text/javascript" src="https://player.radioking.io/scripts/iframe.bundle.js"></script>
 </div>
 
 <style lang="scss">
@@ -91,14 +90,16 @@ const radioUrl = "https://play.radioking.io/raggart";
     display: flex;
     justify-content: space-around;
     align-items: center; 
+    padding: 10px; 
+    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5); 
     z-index: 10;
   }
 
-  // .radio-container > div {
-  //   display: flex; 
-  //   justify-content: center;
-  //   gap: 20px;
-  // }
+  .radio-container > div {
+    display: flex; 
+    justify-content: center;
+    gap: 20px;
+  }
 
   #play-button {
     width: 50px;
