--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,6 +1,8 @@
 ---
-import logo from "../assets/image/logoradio.png";
-const radioUrl = "https://play.radioking.io/raggart";
+import logo2 from "../assets/image/pipo.png";
+import logo3 from "../assets/image/Gallery3.jpg";
+import logo4 from "../assets/image/Gallery5.jpg";
+import logo5 from "../assets/image/Gallery6.png";
 ---
 <section id="media">
   <h2>SOCIAL</h2>
@@ -14,7 +16,16 @@ const radioUrl = "https://play.radioking.io/raggart";
   <p class="name">RAGGART</p>
 </section>
 <div class="radio-container">
-  <iframe  src="https://player.radioking.io/raggart/?c=%232F3542&c2=%237BED9F&f=h&i=1&p=1&s=1&li=0&popup=0&plc=NaN&h=undefined&l=100&v=2&fullsize" style="border-radius: 5px; width: 100%; height: 145px; " frameBorder="0" ></iframe><script type="text/javascript" src="https://player.radioking.io/scripts/iframe.bundle.js"></script>
+    <div class="contents-row">
+    <img src={logo2.src} alt="logo">
+    <img src={logo3.src} alt="logo">
+  </div>
+  <iframe  src="https://player.radioking.io/raggart/?c=%232F3542&c2=%237BED9F&f=h&i=1&p=1&s=1&li=0&popup=0&plc=NaN&h=undefined&l=100&v=2&fullsize" style="border-radius: 5px; width: 100%; height: 145px;" frameBorder="0" >
+  </iframe><script is:inline type="text/javascript" src="https://player.radioking.io/scripts/iframe.bundle.js"></script>
+    <div class="contents-row">
+    <img src={logo4.src} alt="logo">
+    <a href="https://luissanteliz.dev/" target="_blank"><img src={logo5.src} alt="logo"></a>
+  </div>
 </div>
 
 <style lang="scss">
@@ -86,60 +97,31 @@ const radioUrl = "https://play.radioking.io/raggart";
     left: 0;
     width: 100%;
     background-color: #000; 
-    color: white; 
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center; 
-    padding: 10px; 
-    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5); 
     z-index: 10;
   }
-
-  .radio-container > div {
-    display: flex; 
-    justify-content: center;
-    gap: 20px;
+  .contents-row {
+    display: none;
   }
 
-  #play-button {
-    width: 50px;
-    height: 50px;
-    background-image: url('../assets//image/play.png');
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    cursor: pointer; 
-    transition: transform 0.2s, background-color 0.3s; 
-  }
+  @media only screen and (min-width: 820px)  {
+    .radio-container img {
+      width: 60px;
+      height: 60px;
+    }
+    .contents-row {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto 0px;
+    }
 
-  #play-button:hover {
-    transform: scale(1.1);
-    background-color: rgba(255, 255, 255, 0.1); 
-  }
-
-  #pause-button {
-    width: 50px;
-    height: 50px;
-    background-image: url('../assets//image/pause.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    cursor: pointer;
-    transition: transform 0.2s, background-color 0.3s;
-  }
-
-  #pause-button:hover {
-    transform: scale(1.1);
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-
-  #song-title {
-    margin-top: 10px; 
-    font-size: 1.2rem; 
-    font-weight: bold;
-    text-align: center;
+    .contents-row img {
+      margin: 0 0px;
+    }
   }
 
   @media only screen and (min-width: 1024px) {
@@ -157,23 +139,19 @@ const radioUrl = "https://play.radioking.io/raggart";
       flex-direction: row;
     }
 
-    .radio-container {
-      padding: 0; 
-    }
-
     .radio-container img {
-      width: 60px;
-      height: 60px;
+      width: 90px;
+      height: 90px;
+    }
+    .contents-row {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto 80px;
     }
 
-    #pause-button {
-        width: 40px;
-        height: 40px;
-    }
-
-    #play-button {
-      width: 40px;
-      height: 40px;
+    .contents-row img {
+      margin: 0 10px;
     }
   }
 </style>
