--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -107,6 +107,11 @@ import logo5 from "../assets/image/Gallery6.png";
     display: none;
   }
 
+  a {
+    font-size: 2rem;
+    color: #8e27ff;
+  }
+
   @media only screen and (min-width: 820px)  {
     .radio-container img {
       width: 60px;
