--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,8 @@ import Gallery from "../components/Gallery.astro";
 import Videos from "../components/Videos.astro";
 ---
 
-<SpanishLayout title="portafolio">
-	<Header 
-	title="¡Hola! Soy Luis Santeliz, "
-	subtext="Con experiencia en React, JavaScript, HTML y CSS, me dedico a construir aplicaciones web que sean fáciles de usar, rápidas y optimizadas para ofrecer una experiencia fluida al usuario. Echa un vistazo a mi trabajo..!"
-	button="Iniciar Colaboración"/>
+<SpanishLayout>
+	<Header />
 	<Gallery />
 	<Videos />
 	<Social />
