--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,9 @@ import album7 from "../assets/image/Album7.webp";
 ---
 <header id="home">
   <img src={logo.src} alt="">
-  <div class="content-box"> 
+  <!-- <div class="content-box"> 
     <h1>A musical escape to the dimension of Jamaican sounds...</h1>
-  </div>
+  </div> -->
 </header>
 <section id="albums">
   <h2>MUSIC</h2>
