--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,7 +1,6 @@
 ---
+import logo1 from "../assets/image/dmatalogo.png";
 import logo2 from "../assets/image/pipo.png";
-import logo3 from "../assets/image/Gallery3.jpg";
-import logo4 from "../assets/image/Gallery5.jpg";
 import logo5 from "../assets/image/Gallery6.png";
 ---
 <section id="media">
@@ -17,13 +16,12 @@ import logo5 from "../assets/image/Gallery6.png";
 </section>
 <div class="radio-container">
     <div class="contents-row">
-    <img src={logo2.src} alt="logo">
-    <img src={logo3.src} alt="logo">
+    <a href="https://www.instagram.com/dematamusic/" target="_blank"><img src={logo1.src} alt="logo"></a>
+    <a href="https://www.instagram.com/piporoots/" target="_blank"><img src={logo2.src} alt="logo"></a>
   </div>
   <iframe  src="https://player.radioking.io/raggart/?c=%232F3542&c2=%237BED9F&f=h&i=1&p=1&s=1&li=0&popup=0&plc=NaN&h=undefined&l=100&v=2&fullsize" style="border-radius: 5px; width: 100%; height: 145px;" frameBorder="0" >
   </iframe><script is:inline type="text/javascript" src="https://player.radioking.io/scripts/iframe.bundle.js"></script>
     <div class="contents-row">
-    <img src={logo4.src} alt="logo">
     <a href="https://luissanteliz.dev/" target="_blank"><img src={logo5.src} alt="logo"></a>
   </div>
 </div>
