--- a/src/components/Videos.astro
+++ b/src/components/Videos.astro
@@ -4,7 +4,7 @@ import video2 from "/video2.mp4";
 import video3 from "/video3.mp4";
 ---
 <article id="videos">
-  <h2>VIDEO</h2>
+  <h2>VIDEO DE YOUTUBE</h2>
   <div class="underline"></div>
   <div class="videos">
     <figure>
@@ -29,9 +29,6 @@ import video3 from "/video3.mp4";
     </figure>
   </div>
 </article>
-
-
-
 <style lang="scss">
   @use '../assets/sass/index' as *;
 
