--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,13 +1,13 @@
 ---
 import Gallery1 from "../assets/image/Gallery1.jpg";
 import Gallery2 from "../assets/image/Gallery2.jpg";
-import Gallery3 from "../assets/image/Gallery3.jpg";
+import Gallery3 from "../assets/image/galeria01.jpg";
 import Gallery4 from "../assets/image/Gallery4.jpg";
-import Gallery12 from "../assets/image/Gallery12.jpg";
+import Gallery5 from "../assets/image/juan.png";
 import Left from "../assets/image/left.png";
 import Right from "../assets/image/right.png";
 const images = [
-  Gallery1, Gallery2, Gallery3, Gallery4];
+  Gallery1, Gallery2, Gallery3, Gallery4, Gallery5];
 ---
 
 <section id="gallery"> 
