--- a/src/layouts/SpanishLayout.astro
+++ b/src/layouts/SpanishLayout.astro
@@ -13,7 +13,16 @@ import logo from "../assets/image/Gallery1.jpg";
     <meta name="google-site-verification" content="M_3xpWfmwyovVPjekuP9oHivxTbD10tfGwi_YmkBrE0" />
 		<meta name="viewport" content="width=device-width" />
     <meta name="description" content="Enjoy the best reggae and dancehall Jamaican music on Raggart Radio. Listen to your favorite songs 24/7, discover new artists, and connect with the unique vibe of Jamaica. The essence of reggae in one place!" />
-		<meta name="generator" content={Astro.generator} /> 
+		<meta name="generator" content={Astro.generator} />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Enjoy the best reggae and dancehall Jamaican music on Raggart Radio" />
+    <meta property="og:description" content="Enjoy the best reggae and dancehall Jamaican music on Raggart Radio. Listen to your favorite songs 24/7, discover new artists, and connect with the unique vibe of Jamaica. The essence of reggae in one place!o" />
+    <meta property="og:image" content="https://djraggart.com/header.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://luissanteliz.dev/" /> 
 		<title>Raggart - Jamaican Music</title>
 		<script src="https://unpkg.com/@phosphor-icons/web"></script>
 	</head>
